[cleanup] Use valueOf() instead of constructors
Signed-off-by: Patrick Reinhart <patrick@reini.net>